--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "employee_tracker",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "inquirer": "^8.2.0"
-  },
-  "description": ""
+    "name": "employee_tracker",
+    "version": "1.0.0",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.2",
+        "inquirer": "^8.2.0",
+        "mysql2": "^2.3.3",
+        "uuid": "^8.3.2"
+    },
+    "description": ""
 }
